force-app/main/default/objects/NU_Flight__c/fields/NU_Destination__c.field-meta.xml
<CustomField>
    <fullName>NU_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <referenceTo>NU_Airport__c</referenceTo>
    <relationshipLabel>Flights (Destination)</relationshipLabel>
    <relationshipName>Destination</relationshipName>
    <type>Lookup</type>
</CustomField>