force-app/main/default/objects/NU_Flight__c/fields/NU_Distance__c.field-meta.xml
<CustomField>
    <fullName>NU_Distance__c</fullName>
    <label>Distance</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>