force-app/main/default/objects/NU_Flight__c/fields/NU_Origin__c.field-meta.xml
<CustomField>
    <fullName>NU_Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin</label>
    <referenceTo>NU_Airport__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Origin</relationshipName>
    <type>Lookup</type>
</CustomField>